add: create database mapping in connector
