# src/routers/connector.py
@@ -6,6 +6,7 @@ from database.base import ConnectorNotFoundError
 from models.api.connector import APIConnector
 
 from database.elastic import ElasticAdapter
+from models.mapping.database import DatabaseMapping
 
 router = APIRouter()
 
@@ -58,3 +59,43 @@ def get_filenames(company_name: str, remote: Optional[bool] = True) -> Dict[str,
         response['message'] = 'Conector não encontrado para essa empresa'
 
     return response
+
+
+@router.post('/{company_name}/database_mapping', status_code=201)
+def create_database_mapping(company_name: str, database_mapping: DatabaseMapping):
+    """Cria um mapeamento de banco de dados para o conector da empresa.
+    
+    Parameters
+    ----------
+    company_name : str
+        O nome da empresa que se deseja realizar o mapeamento
+    \n
+    database_mapping : DatabaseMapping
+        O mapeamento do banco de dados
+    
+    Raises
+    ------
+    ConnectionNotFoundError:
+        Conector não encontrado para essa empresa
+
+    Returns
+    -------
+    201:
+        Mapeamento Criado
+    \n
+    404:
+        Conector não encontrado para essa empresa
+    \n
+    422:
+        Estrutura do mapeamento está inválida
+    """
+    try:
+        adapter = ElasticAdapter()
+        connector_model = adapter.read_connector(company_name)
+        connector_model.database_mapping = database_mapping
+        adapter.update_connector(connector_model.company_name, connector_model)
+    except ConnectorNotFoundError:
+        raise HTTPException(
+            404,
+            detail='Conector não encontrado para essa empresa'
+        )
